fix button accessibility issue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3 class="author__name">Michelle Appleton</h3>
           <div class="date">28 Jun 2020</div>
 
-          <button class="btn-share">
+          <button class="btn-share" title="Toggle Share">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
               <path
                 fill="#6E8098"
